--- a/src/styling/global.scss
+++ b/src/styling/global.scss
@@ -28,3 +28,68 @@ main {
 	max-width: 450px;
 	min-width: 300px;
 }
+
+.form {
+	border-radius: 15px 15px 0 0;
+	background-color: white;
+	margin: 0 15px;
+
+	&__header {
+		&-left {
+			padding: 15px;
+		}
+
+		h1 {
+			margin: 0;
+		}
+	}
+
+	&__body {
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
+
+	&__content {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 60px;
+		z-index: 100;
+		overflow: hidden;
+		border-radius: 0 0 15px 15px;
+		display: flex;
+		background-color: #f4f4f4;
+		box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+		transition: transform 0.1s ease-in;
+
+		&:nth-child(2) {
+			transform: translateY(10px) scale(0.95);
+			z-index: 1;
+		}
+
+		input {
+			flex-grow: 1;
+			font-size: 12px;
+			padding: 20px;
+			border: 4px transparent solid;
+			background-color: inherit;
+
+			&:focus-visible {
+				outline: 0;
+				border: 4px solid #abb8cb;
+				border-radius: 0 0 0 15px;
+			}
+		}
+
+		button {
+			min-width: 64px;
+			border: 0;
+			background: linear-gradient(126.27deg, #a6effd 3.02%, #5cb0ec 100%);
+			&:not(:disabled) {
+				cursor: pointer;
+			}
+		}
+	}
+}
